# money-nexus-django

./: .gitignore  Pipfile  manage.py  pyproject.toml
bank_accounts/: apps.py  urls.py  views.py
bank_accounts/templates/bank_accounts/: bank_accounts.html
categories/: apps.py  models.py  views.py
categories/migrations/: 0001_initial.py
categories/templates/categories/: categories.html  category-dialog.html
money_nexus/: json_utils.py  settings.py  urls.py  views.py  wsgi.py
money_nexus/templates/money_nexus/: base.html  home.html
money_planner/: apps.py  settings.py  urls.py  wsgi.py
money_planner/migrations/: 0001_initial.py
money_planner/templates/money_planner/: base.html  home.html  tags.html
money_planner/views/: __init__.py  home.py  tags.py  transactions.py
money_planner_app/: apps.py  models.py  views.py
money_planner_app/migrations/: 0001_initial.py  0002_transaction_bill_image.py
money_planner_app/models/: transaction.py
money_planner_app/templates/money_planner_app/: base.html  home.html  index.html  tags.html  transactions.html
money_planner_app/views/: home.py  tags.py  transactions.py
tags/: models.py  urls.py  views.py
tags/migrations/: 0001_initial.py
tags/templates/tags/: tags.html
transactions/: apps.py  models.py  urls.py  views.py
transactions/migrations/: 0001_initial.py  0002_transaction_outgoing.py
transactions/templates/transactions/: transaction-dialog.html  transactions.html
