[tool.poetry]
name = "money_planner"
version = "0.1.0"
description = ""
authors = ["Josef Bauer <bauerjoe@gmx.de>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^2.2"
pillow = "^6.2"
psycopg2-binary = "^2.8"

[tool.poetry.dev-dependencies]
pylint = "^2.4"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
